--- a/TeamHomeworks/TeamHomeworks.csproj
+++ b/TeamHomeworks/TeamHomeworks.csproj
@@ -14,5 +14,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tasks_1&amp;2\" />
+    <Folder Include="Task_3\" />
   </ItemGroup>
 </Project>
