tast 3 and 4 complete

--- a/TeamHomeworks/TeamHomeworks.csproj
+++ b/TeamHomeworks/TeamHomeworks.csproj
@@ -15,5 +15,6 @@
   <ItemGroup>
     <Folder Include="Tasks_1&amp;2\" />
     <Folder Include="Task_3\" />
+    <Folder Include="Task_4\" />
   </ItemGroup>
 </Project>
