Final updates to task 2

--- a/TeamHomeworks/TeamHomeworks.csproj
+++ b/TeamHomeworks/TeamHomeworks.csproj
@@ -16,5 +16,6 @@
     <Folder Include="Tasks_1&amp;2\" />
     <Folder Include="Task_3\" />
     <Folder Include="Task_4\" />
+    <Folder Include="Task_5\" />
   </ItemGroup>
 </Project>
