--- a/TeamHomeworks/TeamHomeworks.csproj
+++ b/TeamHomeworks/TeamHomeworks.csproj
@@ -11,6 +11,7 @@
     <Compile Remove="Task_1_2_Circle.cs" />
     <Compile Remove="Square.cs" />
     <Compile Remove="Tasks_1_&amp;_2.cs" />
+    <Compile Remove="Task_7\Country.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Tasks_1&amp;2\" />
